tests/ui/error-codes/E0600.rs
fn main() {
    !"a"; //~ ERROR E0600
}
